--- a/examples/harmonic_analysis/irreducible_q_points/ir_qpoints.ipynb
+++ b/examples/harmonic_analysis/irreducible_q_points/ir_qpoints.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,18 +21,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Fm-3m (225)'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mat = 'mgo'\n",
     "primitive = read(f'{mat}/geometry.in')\n",
-    "supercell = read(f'{mat}/geometry.in.supercell')"
+    "supercell = read(f'{mat}/geometry.in.supercell')\n",
+    "spg.get_spacegroup(to_spglib_cell(supercell))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +55,7 @@
       ".. found 32 (31) lattice points in 0.002s\n",
       ".. found 32 (31) lattice points in 0.001s\n",
       "** Force constants not set, your choice.\n",
-      ".. time elapsed: 0.141s\n"
+      ".. time elapsed: 0.132s\n"
      ]
     }
    ],
@@ -53,60 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[ 0,  0,  0],\n",
-       "        [ 1,  0,  0],\n",
-       "        [ 0,  1,  0],\n",
-       "        [ 0,  0,  1],\n",
-       "        [ 1,  1,  0],\n",
-       "        [ 1,  0,  1],\n",
-       "        [ 0,  1,  1],\n",
-       "        [ 1,  1, -1],\n",
-       "        [ 1, -1,  1],\n",
-       "        [-1,  1,  1],\n",
-       "        [ 1,  1,  1],\n",
-       "        [ 2,  0,  0],\n",
-       "        [ 0,  2,  0],\n",
-       "        [ 0,  0,  2],\n",
-       "        [ 2,  1,  0],\n",
-       "        [ 1,  2,  0],\n",
-       "        [ 2,  0,  1],\n",
-       "        [ 0,  2,  1],\n",
-       "        [ 1,  0,  2],\n",
-       "        [ 0,  1,  2],\n",
-       "        [ 2,  1, -1],\n",
-       "        [ 1,  2, -1],\n",
-       "        [ 2, -1,  1],\n",
-       "        [ 1, -1,  2],\n",
-       "        [ 2,  1,  1],\n",
-       "        [-1,  2,  1],\n",
-       "        [ 1,  2,  1],\n",
-       "        [-1,  1,  2],\n",
-       "        [ 1,  1,  2],\n",
-       "        [ 3,  0,  0],\n",
-       "        [ 0,  3,  0],\n",
-       "        [ 0,  0,  3]]), 32)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "my_mesh = np.round(ha.q_points @ supercell.cell.T).astype(int)\n",
-    "n_lp = len(my_mesh)\n",
-    "my_mesh, n_lp"
+    "my_mesh = ha.q_points_frac"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -115,28 +83,62 @@
        "array([5, 5, 5])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n_qmesh = my_mesh.max(axis=0) - my_mesh.min(axis=0) + 1\n",
+    "n_qmesh = (my_mesh.max(axis=0) - my_mesh.min(axis=0)) + 1\n",
     "n_qmesh"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapping, spg_mesh = spg.get_ir_reciprocal_mesh(n_qmesh, to_spglib_cell(primitive))"
+    "def to_frac_primitive(q, primitve, supercell):\n",
+    "    return clean_matrix(q @ supercell.get_reciprocal_cell() @ primitive.cell.T)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "111 [0.5 0.5 0.5] [0.5 0.5 0.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mapping, spg_mesh = spg.get_ir_reciprocal_mesh(n_qmesh * 2, to_spglib_cell(supercell))\n",
+    "for ii, q in enumerate(spg_mesh):\n",
+    "    q1 = to_frac_primitive(q, primitive, supercell)\n",
+    "    q2 = to_frac_primitive(spg_mesh[mapping[ii]], primitive, supercell)\n",
+    "    if np.linalg.norm(q1 - [.5, .5, .5]) < .1:\n",
+    "        print(ii, q1, q2)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "for ii, fq in enumerate(spg_mesh): #[np.unique(mapping)]:\n",
+    "    cart_q = fq @ supercell.get_reciprocal_cell()\n",
+    "    frac_q = clean_matrix(cart_q @ primitive.cell.T)\n",
+    "    ptype = spg_mesh[mapping[ii]]\n",
+    "    print(ii, fq, ptype, frac_q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +167,7 @@
        "True"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,20 +179,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# match the q points from my list with the ones from spglib\n",
     "\n",
+    "n_lp = len(my_mesh)\n",
     "match_list = -np.ones(n_lp, dtype=int)\n",
     "my_mapping = -np.ones(n_lp, dtype=int)\n",
     "\n",
-    "for i1, q1 in enumerate(my_mesh % n_qmesh):\n",
-    "    for i2, q2 in enumerate(spg_mesh % n_qmesh):\n",
+    "for i1, q1 in enumerate(my_mesh):\n",
+    "    for i2, q2 in enumerate(spg_mesh):\n",
     "        if np.linalg.norm(q1 - q2) < 1e-12:\n",
     "            # exchange the q point in spg list with my one\n",
-    "            ir_grid[ir_mapping[i2]] = q1\n",
+    "            # ir_grid[ir_mapping[i2]] = q1\n",
     "            match_list[i1] = i2\n",
     "            my_mapping[i1] = ir_mapping[i2]\n",
     "\n",
@@ -202,151 +205,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  0,   1,   5,  25,   6,  26,  30, 106,  46,  34,  31,   2,  10,\n",
-       "        50,   7,  11,  27,  35,  51,  55, 107, 111,  47,  71,  32,  39,\n",
-       "        36,  59,  56,   3,  15,  75])"
+       "(array([  0,   1,  10, 100,  11, 101, 110, 911, 191, 119, 111,   2,  20,\n",
+       "        200,  12,  21, 102, 120, 201, 210, 912, 921, 192, 291, 112, 129,\n",
+       "        121, 219, 211,   3,  30, 300]),\n",
+       " array([ 0,  1,  2,  3,  6,  7, 21, 22]))"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "match_list"
+    "match_list, np.unique(my_mapping)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0, 0, 0],\n",
-       "       [1, 1, 1],\n",
-       "       [0, 0, 3],\n",
-       "       [0, 1, 1],\n",
-       "       [0, 1, 2],\n",
-       "       [1, 1, 2],\n",
-       "       [4, 1, 2]], dtype=int32)"
+       "array([[0.  , 0.  , 0.  ],\n",
+       "       [0.  , 0.25, 0.25],\n",
+       "       [0.  , 0.5 , 0.5 ],\n",
+       "       [0.  , 0.75, 0.75],\n",
+       "       [0.25, 0.25, 0.5 ],\n",
+       "       [0.25, 0.5 , 0.75],\n",
+       "       [0.5 , 0.5 , 0.5 ],\n",
+       "       [0.5 , 0.75, 0.75]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ir_grid[np.unique(my_mapping)]"
+    "my_ir_grid_temp = clean_matrix(ir_grid[np.unique(my_mapping)] @ supercell.get_reciprocal_cell() @ primitive.cell.T)\n",
+    "my_ir_grid_temp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.  , 0.  , 0.  ],\n",
+       "       [0.  , 0.25, 0.25],\n",
+       "       [0.  , 0.5 , 0.5 ],\n",
+       "       [0.  , 0.75, 0.75],\n",
+       "       [0.25, 0.25, 0.5 ],\n",
+       "       [0.25, 0.5 , 0.75],\n",
+       "       [0.5 , 0.5 , 0.5 ],\n",
+       "       [0.5 , 0.75, 0.75]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# dict to bring order into the chaos\n",
+    "# wrap atoms back\n",
+    "my_ir_grid_temp_cleaned = clean_matrix((my_ir_grid_temp + .001) % 1 - .001)\n",
+    "my_ir_grid_temp_cleaned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 1, 1, 4, 4, 4, 6, 6, 6, 6, 2, 2, 2, 5, 5, 5, 5, 5, 5, 7, 7,\n",
+       "       7, 7, 7, 7, 7, 7, 7, 3, 3, 3])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "dct = {}\n",
     "for nn, ii in enumerate(np.unique(my_mapping)):\n",
-    "    dct[ii] = nn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: 0, 1: 1, 2: 2, 3: 3, 4: 4, 6: 5, 9: 6}"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dct"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(7, 7)"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "my_ir_grid = ir_grid[np.unique(my_mapping)]\n",
-    "len(my_ir_grid), len(np.unique(my_ir_grid, axis=0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 1, 1, 3, 3, 3, 4, 4, 4, 1, 2, 2, 2, 4, 4, 4, 4, 4, 4, 6, 6,\n",
-       "       6, 6, 5, 6, 5, 6, 5, 2, 2, 2])"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "    dct[ii] = nn\n",
+    "    \n",
     "my_ir_mapping = np.array([dct[ii] for ii in my_mapping])\n",
     "my_ir_mapping"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_ir_grid = []\n",
+    "ir_temp_mapping = []\n",
+    "for ii, ir_q_temp in enumerate(my_ir_grid_temp_cleaned):\n",
+    "    for jj, ir_q in enumerate(my_ir_grid):\n",
+    "        if np.linalg.norm(ir_q_temp - ir_q) < 1e-12:\n",
+    "            # they are the same:\n",
+    "            my_ir_mapping[my_ir_mapping == ii] = jj\n",
+    "            break\n",
+    "    else:\n",
+    "        # otherwise add to list\n",
+    "        my_ir_grid.append(ir_q_temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "array([[0., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [2., 0., 0.],\n",
+       "       [3., 0., 0.],\n",
+       "       [1., 1., 0.],\n",
+       "       [2., 1., 0.],\n",
+       "       [1., 1., 1.],\n",
+       "       [2., 1., 1.]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# verify\n",
-    "all((my_ir_grid[my_ir_mapping[i]] % n_qmesh == ir_grid[q] % n_qmesh).all() for i, q in enumerate(my_mapping))"
+    "# translate back to integers (reference with supercell)\n",
+    "my_ir_grid = np.array(my_ir_grid)\n",
+    "my_ir_grid = clean_matrix(my_ir_grid @ primitive.get_reciprocal_cell() @ supercell.cell.T)\n",
+    "my_ir_grid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# verify\n",
+    "# [(my_ir_grid[my_ir_mapping[i]] % n_qmesh, ir_grid[q] % n_qmesh) for i, q in enumerate(my_mapping)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +378,7 @@
      "output_type": "stream",
      "text": [
       "Number of q points reduced from\n",
-      "  32 to 7\n"
+      "  32 to 8\n"
      ]
     }
    ],
@@ -364,38 +388,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".. number of q points reduced from 32 to 7 in 0.050s\n"
+      ".. number of q points reduced from 32 to 8 in 0.184s\n"
      ]
     }
    ],
    "source": [
     "# now implemented in HarmonicAnalysis\n",
-    "m, iqs = ha.irreducible_q_points"
+    "m, iqs = ha.irreducible_q_points_frac"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0 0] [0. 0. 0.] [0. 0. 0.]\n",
-      "[1 1 1] [0.5 0.5 0.5] [1. 1. 1.]\n",
-      "[0 0 3] [0.75 0.75 0.  ] [0. 0. 3.]\n",
-      "[0 1 1] [0.5  0.25 0.25] [0. 1. 1.]\n",
-      "[0 1 2] [0.75 0.5  0.25] [0. 1. 2.]\n",
-      "[1 1 2] [0.75 0.75 0.5 ] [1. 1. 2.]\n",
-      "[-1  1  2] [0.75 0.25 0.  ] [-1.  1.  2.]\n"
+      "[0. 0. 0.] [0. 0. 0.] [0. 0. 0.]\n",
+      "[1. 0. 0.] [0.   0.25 0.25] [1. 0. 0.]\n",
+      "[2. 0. 0.] [0.  0.5 0.5] [2. 0. 0.]\n",
+      "[3. 0. 0.] [0.   0.75 0.75] [3. 0. 0.]\n",
+      "[1. 1. 0.] [0.25 0.25 0.5 ] [1. 1. 0.]\n",
+      "[2. 1. 0.] [0.25 0.5  0.75] [2. 1. 0.]\n",
+      "[1. 1. 1.] [0.5 0.5 0.5] [1. 1. 1.]\n",
+      "[2. 1. 1.] [0.5  0.75 0.75] [2. 1. 1.]\n"
      ]
     }
    ],
