harmonic_analysis | split get_irreducible_qpoints and get_irreducible_mapping

--- a/examples/harmonic_analysis/irreducible_q_points/ir_qpoints.ipynb
+++ b/examples/harmonic_analysis/irreducible_q_points/ir_qpoints.ipynb
@@ -55,7 +55,7 @@
       ".. found 32 (31) lattice points in 0.002s\n",
       ".. found 32 (31) lattice points in 0.001s\n",
       "** Force constants not set, your choice.\n",
-      ".. time elapsed: 0.132s\n"
+      ".. time elapsed: 0.158s\n"
      ]
     }
    ],
@@ -123,17 +123,6 @@
     "    q2 = to_frac_primitive(spg_mesh[mapping[ii]], primitive, supercell)\n",
     "    if np.linalg.norm(q1 - [.5, .5, .5]) < .1:\n",
     "        print(ii, q1, q2)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "for ii, fq in enumerate(spg_mesh): #[np.unique(mapping)]:\n",
-    "    cart_q = fq @ supercell.get_reciprocal_cell()\n",
-    "    frac_q = clean_matrix(cart_q @ primitive.cell.T)\n",
-    "    ptype = spg_mesh[mapping[ii]]\n",
-    "    print(ii, fq, ptype, frac_q)"
    ]
   },
   {
@@ -250,7 +239,7 @@
     }
    ],
    "source": [
-    "my_ir_grid_temp = clean_matrix(ir_grid[np.unique(my_mapping)] @ supercell.get_reciprocal_cell() @ primitive.cell.T)\n",
+    "my_ir_grid_temp = to_frac_primitive(ir_grid[np.unique(my_mapping)], primitive, supercell)\n",
     "my_ir_grid_temp"
    ]
   },
@@ -395,13 +384,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".. number of q points reduced from 32 to 8 in 0.184s\n"
+      ".. number of q points reduced from 32 to 8 in 0.188s\n"
      ]
     }
    ],
    "source": [
     "# now implemented in HarmonicAnalysis\n",
-    "m, iqs = ha.irreducible_q_points_frac"
+    "iqs = ha.irreducible_q_points_frac"
    ]
   },
   {
