harmonic analysis | streamline handling of force constants and lattice points
- assume that force constants and lattice points for computing dynamical matrix
  come from TDEP's `infile/outfile.forceconstant`
- Computation of dynamical matrices is then quite simple
- Example updated

--- a/examples/harmonic_analysis/bandstructure/bandstructure.ipynb
+++ b/examples/harmonic_analysis/bandstructure/bandstructure.ipynb
@@ -32,13 +32,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -47,44 +40,28 @@
      "output_type": "stream",
      "text": [
       "Parse force constants from\n",
-      "  outfile.forceconstant_remapped\n",
-      ".. Number of atoms:   64\n",
+      "  outfile.forceconstant\n",
+      ".. remap representation for supercell:  False\n",
+      ".. Number of atoms:   2\n",
       ".. Real space cutoff: 3.660 \\AA\n",
-      ".. time elapsed: 0.017s\n"
+      ".. Number of lattice points: 54 (33 unique)\n",
+      ".. time elapsed: 0.002s\n",
+      "Set up harmonic analysis for MgO:\n",
+      ".. found 32 (31) lattice points in 0.001s\n",
+      ".. time elapsed: 0.069s\n"
      ]
     }
    ],
    "source": [
     "primitive = read('infile.ucposcar', format='vasp')\n",
     "supercell = read('infile.ssposcar', format='vasp')\n",
-    "fc = parse_tdep_forceconstant('outfile.forceconstant_remapped')"
+    "fcs, lps = parse_tdep_forceconstant('outfile.forceconstant')\n",
+    "ha = HarmonicAnalysis(primitive, supercell, fcs, lps)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[0.        , 0.        , 0.        ],\n",
-       "        [2.11309971, 2.11309971, 2.11309971]]),\n",
-       " array([0.        , 3.65999606]))"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "primitive.positions, la.norm(primitive.positions, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +145,7 @@
        "array([0.375, 0.375, 0.75 ])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,15 +167,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "Dq = (phases[:, None, None] * Dx).sum(axis=0)\n",
     "\n",
     "# Check Hermititicty\n",
-    "\n",
     "assert la.norm(Dq - Dq.conj().T) < 1e-12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8.42442216, 11.79445968, 12.36970708, 12.82895893, 14.26691616,\n",
+       "       15.73694375])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_freq(Dq):\n",
+    "    evals = la.eigh(Dq)[0]\n",
+    "    return np.sign(evals) * abs(evals) ** 0.5 * omega_to_THz\n",
+    "\n",
+    "get_freq(Dq)"
    ]
   },
   {
@@ -219,11 +220,8 @@
     }
    ],
    "source": [
-    "def get_freq(Dq):\n",
-    "    evals = la.eigh(Dq)[0]\n",
-    "    return np.sign(evals) * abs(evals) ** 0.5 * omega_to_THz\n",
-    "\n",
-    "get_freq(Dq)"
+    "# with HarmonicAnalysis:\n",
+    "get_freq(ha.get_Dq(q, fractional=True))"
    ]
   },
   {
@@ -256,8 +254,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 27.4 ms, sys: 346 µs, total: 27.8 ms\n",
-      "Wall time: 27.1 ms\n"
+      "CPU times: user 32.9 ms, sys: 29 µs, total: 32.9 ms\n",
+      "Wall time: 31.8 ms\n"
      ]
     }
    ],
@@ -267,8 +265,8 @@
     "dispersions = []\n",
     "for band in bands:\n",
     "    dispersion = []\n",
-    "    for q in band:\n",
-    "        Dq = get_Dq(q, Dx, lps)\n",
+    "    for qp in band:\n",
+    "        Dq = get_Dq(qp, Dx, lps)\n",
     "        ws = get_freq(Dq)\n",
     "        dispersion.append(ws)\n",
     "    dispersions.append(dispersion)           "
@@ -311,55 +309,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.01020408, 0.01020408, 0.01020408],\n",
-       "       [0.02040816, 0.02040816, 0.02040816],\n",
-       "       [0.03061224, 0.03061224, 0.03061224],\n",
-       "       [0.04081633, 0.04081633, 0.04081633],\n",
-       "       [0.05102041, 0.05102041, 0.05102041],\n",
-       "       [0.06122449, 0.06122449, 0.06122449],\n",
-       "       [0.07142857, 0.07142857, 0.07142857],\n",
-       "       [0.08163265, 0.08163265, 0.08163265],\n",
-       "       [0.09183673, 0.09183673, 0.09183673],\n",
-       "       [0.10204082, 0.10204082, 0.10204082],\n",
-       "       [0.1122449 , 0.1122449 , 0.1122449 ],\n",
-       "       [0.12244898, 0.12244898, 0.12244898],\n",
-       "       [0.13265306, 0.13265306, 0.13265306],\n",
-       "       [0.14285714, 0.14285714, 0.14285714],\n",
-       "       [0.15306122, 0.15306122, 0.15306122],\n",
-       "       [0.16326531, 0.16326531, 0.16326531],\n",
-       "       [0.17346939, 0.17346939, 0.17346939],\n",
-       "       [0.18367347, 0.18367347, 0.18367347],\n",
-       "       [0.19387755, 0.19387755, 0.19387755],\n",
-       "       [0.20408163, 0.20408163, 0.20408163],\n",
-       "       [0.21428571, 0.21428571, 0.21428571],\n",
-       "       [0.2244898 , 0.2244898 , 0.2244898 ],\n",
-       "       [0.23469388, 0.23469388, 0.23469388],\n",
-       "       [0.24489796, 0.24489796, 0.24489796],\n",
-       "       [0.25510204, 0.25510204, 0.25510204],\n",
-       "       [0.26530612, 0.26530612, 0.26530612],\n",
-       "       [0.2755102 , 0.2755102 , 0.2755102 ],\n",
-       "       [0.28571429, 0.28571429, 0.28571429],\n",
-       "       [0.29591837, 0.29591837, 0.29591837],\n",
-       "       [0.30612245, 0.30612245, 0.30612245],\n",
-       "       [0.31632653, 0.31632653, 0.31632653],\n",
-       "       [0.32653061, 0.32653061, 0.32653061],\n",
-       "       [0.33673469, 0.33673469, 0.33673469],\n",
-       "       [0.34693878, 0.34693878, 0.34693878],\n",
-       "       [0.35714286, 0.35714286, 0.35714286],\n",
-       "       [0.36734694, 0.36734694, 0.36734694],\n",
-       "       [0.37755102, 0.37755102, 0.37755102],\n",
-       "       [0.3877551 , 0.3877551 , 0.3877551 ],\n",
-       "       [0.39795918, 0.39795918, 0.39795918],\n",
-       "       [0.40816327, 0.40816327, 0.40816327],\n",
-       "       [0.41836735, 0.41836735, 0.41836735],\n",
-       "       [0.42857143, 0.42857143, 0.42857143],\n",
-       "       [0.43877551, 0.43877551, 0.43877551],\n",
-       "       [0.44897959, 0.44897959, 0.44897959],\n",
-       "       [0.45918367, 0.45918367, 0.45918367],\n",
-       "       [0.46938776, 0.46938776, 0.46938776],\n",
-       "       [0.47959184, 0.47959184, 0.47959184],\n",
-       "       [0.48979592, 0.48979592, 0.48979592],\n",
-       "       [0.5       , 0.5       , 0.5       ]])"
+       "(array([ 8.42442216, 11.79445968, 12.36970708, 12.82895893, 14.26691616,\n",
+       "        15.73694375]),\n",
+       " array([[ 8.42442216, 11.79445968, 12.36970708, 12.82895893, 14.26691616,\n",
+       "         15.73694375]]))"
       ]
      },
      "execution_count": 13,
@@ -368,7 +321,8 @@
     }
    ],
    "source": [
-    "np.diff(band, axis=0).cumsum(axis=0)"
+    "# with HarmonicAnalysis:\n",
+    "get_freq(ha.get_Dq(q)), ha.omegas([q]) * omega_to_THz"
    ]
   },
   {
