mode_projection | update example by showing the frequencies

--- a/examples/harmonic_analysis/mode_projection.ipynb
+++ b/examples/harmonic_analysis/mode_projection.ipynb
@@ -13,7 +13,7 @@
     "from hilde.io import read\n",
     "from hilde.trajectory import reader\n",
     "from hilde.harmonic_analysis import HarmonicAnalysis\n",
-    "from hilde.konstanten import kB"
+    "from hilde.konstanten import kB, omega_to_THz"
    ]
   },
   {
@@ -36,11 +36,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".. found 4 (10) lattice points in 0.009s\n",
+      "Set up harmonic analysis for Si2:\n",
+      ".. found 4 (10) lattice points in 0.002s\n",
       ".. found 4 (10) lattice points in 0.000s\n",
-      ".. found 4 (10) lattice points in 0.000s\n",
-      ".. matched 8 positions in supercell and primitive cell in 0.001s\n",
-      ".. setup for harmonic analysis finished in 0.023s\n"
+      ".. time elapsed: 0.009s\n"
      ]
     }
    ],
@@ -57,8 +56,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".. found 4 (10) lattice points in 0.000s\n",
-      ".. matched 8 positions in supercell and primitive cell in 0.005s\n"
+      ".. found 4 (10) lattice points in 0.001s\n",
+      ".. matched 8 positions in supercell and primitive cell in 0.001s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[5.46326586e-07, 5.46326586e-07, 5.46326586e-07, 1.54493177e+01,\n",
+       "        1.54493177e+01, 1.54493177e+01],\n",
+       "       [4.01538789e+00, 4.01538789e+00, 1.21670171e+01, 1.21670171e+01,\n",
+       "        1.37763824e+01, 1.37763824e+01],\n",
+       "       [4.01538789e+00, 4.01538789e+00, 1.21670171e+01, 1.21670171e+01,\n",
+       "        1.37763824e+01, 1.37763824e+01],\n",
+       "       [4.01538789e+00, 4.01538789e+00, 1.21670171e+01, 1.21670171e+01,\n",
+       "        1.37763824e+01, 1.37763824e+01]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ha.omegas() * omega_to_THz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".. trajectories/harmonic.yaml.bz2 parsed in 0.018s\n",
+      ".. found 4 (10) lattice points in 0.001s\n",
+      ".. matched 8 positions in supercell and primitive cell in 0.005s\n",
+      ".. project trajectory in 0.038s\n"
      ]
     }
    ],
@@ -73,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -100,15 +136,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      ".. trajectories/aiMD.yaml.bz2 parsed in 0.023s\n",
       ".. found 4 (10) lattice points in 0.000s\n",
-      ".. matched 8 positions in supercell and primitive cell in 0.006s\n"
+      ".. matched 8 positions in supercell and primitive cell in 0.005s\n",
+      ".. project trajectory in 0.037s\n"
      ]
     },
     {
@@ -162,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
