son | change default `trajectory.yaml` to `trajectory.son`

--- a/examples/harmonic_analysis/mode_projection.ipynb
+++ b/examples/harmonic_analysis/mode_projection.ipynb
@@ -320,7 +320,7 @@
       ".. Real space cutoff: 2.350 \\AA\n",
       ".. Number of lattice points: 40 (13 unique)\n",
       ".. time elapsed: 0.002s\n",
-      "** trajectory.yaml deleted.\n",
+      "** trajectory.son deleted.\n",
       "100%|██████████| 1001/1001 [00:00<00:00, 1276.47it/s]\n"
      ]
     }
@@ -339,7 +339,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parse trajectory in trajectory.yaml\n",
+      "Parse trajectory in trajectory.son\n",
       ".. read file:\n",
       "100%|██████████| 1002/1002 [00:00<00:00, 29337.76it/s]\n",
       ".. process file:\n",
@@ -349,7 +349,7 @@
     }
    ],
    "source": [
-    "traj = reader('trajectory.yaml')\n",
+    "traj = reader('trajectory.son')\n",
     "\n",
     "temperatures = np.array([a.get_temperature() for a in traj])\n",
     "\n",
