trajectory | create dataset by `traj.dataset`
* rename `heat_flux_data` to `heat_flux_dataset`

--- a/examples/green_kubo/simple_kappa.ipynb
+++ b/examples/green_kubo/simple_kappa.ipynb
@@ -36,18 +36,20 @@
      "text": [
       "[GreenKubo]    Parse trajectory\n",
       "[son] read file:  CsPbBr_300K.son\n",
-      "[GreenKubo]    .. done in 4.487s|||||||||||||||||||||||  4354/4354\n",
+      "[GreenKubo]    .. done in 4.328s|||||||||||||||||||||||  4354/4354\n",
       "[hilde]        .. return only atoms with `stresses` computed\n",
       "[trajectory]   Discard first 200 atoms\n",
       "[trajectory]   Discard last  0 atoms\n",
       "[trajectory]   .. length before: 871\n",
       "[trajectory]   .. length after:  671\n",
-      "[GreenKubo]    Get pressure from trajectory\n",
-      "[GreenKubo]    .. time elapsed: 0.102s\n",
+      "[GreenKubo]    Get positions from trajectory\n",
+      "[GreenKubo]    .. time elapsed: 0.015s\n",
       "[GreenKubo]    Get velocities from trajectory\n",
-      "[GreenKubo]    .. time elapsed: 0.005s\n",
+      "[GreenKubo]    .. time elapsed: 0.008s\n",
+      "[GreenKubo]    Get pressure from trajectory\n",
+      "[GreenKubo]    .. time elapsed: 0.094s\n",
       "[GreenKubo]    Compute heat flux:\n",
-      "[GreenKubo]    .. time elapsed: 0.175s|||||||||  671/671\n"
+      "[GreenKubo]    .. time elapsed: 0.136s|||||||||  671/671\n"
      ]
     }
    ],
@@ -58,7 +60,7 @@
     "traj = trajectory.discard(200)\n",
     "\n",
     "# get heat flux dataset\n",
-    "ds = traj.heat_flux_data\n",
+    "ds = traj.heat_flux_dataset\n",
     "\n",
     "# write to file\n",
     "ds.to_netcdf('flux.nc')"
@@ -86,9 +88,10 @@
        "    pressure       (time) float64 0.003464 0.00339 0.003296 ... 0.004159 0.00394\n",
        "    temperature    (time) float64 301.6 313.3 320.3 308.2 ... 299.9 295.1 302.0\n",
        "Attributes:\n",
+       "    time unit:                     fs\n",
+       "    timestep:                      25.0\n",
        "    volume:                        6528.916195244442\n",
        "    symbols:                       ['Pb', 'Pb', 'Pb', 'Pb', 'Pb', 'Pb', 'Pb',...\n",
-       "    masses:                        [207.2        207.2        207.2        20...\n",
        "    flattend reference positions:  [ 0.          5.89428374  0.          8.42..."
       ]
      },
@@ -117,7 +120,7 @@
       "[GreenKubo]    .. Volume:          6528.92  AA^3\n",
       "[GreenKubo]    .. Temperature:      308.89  K\n",
       "[GreenKubo]    -> Prefactor:     424024.62  W/mK / (eV/AA^/ps)\n",
-      "[GreenKubo]    .. time elapsed: 0.720s\n"
+      "[GreenKubo]    .. time elapsed: 0.614s\n"
      ]
     }
    ],
@@ -142,7 +145,7 @@
       "[GreenKubo]    .. Volume:          6528.92  AA^3\n",
       "[GreenKubo]    .. Temperature:      308.89  K\n",
       "[GreenKubo]    -> Prefactor:     424024.62  W/mK / (eV/AA^/ps)\n",
-      "[GreenKubo]    .. time elapsed: 0.555s\n",
+      "[GreenKubo]    .. time elapsed: 0.523s\n",
       "[GreenKubo]    Integrate heat flux autocorrelation function cumulatively\n",
       "[GreenKubo]    .. Integrator:   `scipy.integrate.cumtrapz`\n",
       "[GreenKubo]    .. analytic:      False\n"
