paper | complete draft

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -44,6 +44,20 @@
   year         = {2015},
 }
 
+@article{Togo2015b,
+  author       = {Togo, Atsushi and Chaput, Laurent and Tanaka, Isao},
+  doi          = {10.1103/PhysRevB.91.094306},
+  issue        = {9},
+  journaltitle = {Phys. Rev. B},
+  month        = {Mar},
+  numpages     = {31},
+  pages        = {094306},
+  publisher    = {American Physical Society},
+  title        = {Distributions of phonon lifetimes in Brillouin zones},
+  volume       = {91},
+  year         = {2015},
+}
+
 @article{Blum2009,
   author       = {Blum, Volker and Gehrke, Ralf and Hanke, Felix and Havu, Paula and Havu, Ville and Ren, Xinguo and Reuter, Karsten and Scheffler, Matthias},
   doi          = {10.1016/j.cpc.2009.06.022},
@@ -125,5 +139,47 @@
   publisher = {Cambridge University Press},
   title     = {Introduction to lattice dynamics},
   year      = {1993},
+}
+
+@report{Plimpton1993,
+  author      = {Plimpton, Steve},
+  institution = {Sandia National Labs., Albuquerque, NM (United States)},
+  title       = {Fast parallel algorithms for short-range molecular dynamics},
+  type        = {techreport},
+  year        = {1993},
+}
+
+@article{Jain2015,
+  author       = {Jain, Anubhav and Ong, Shyue Ping and Chen, Wei and Medasani, Bharat and Qu, Xiaohui and Kocher, Michael and Brafman, Miriam and Petretto, Guido and Rignanese, Gian-Marco and Hautier, Geoffroy and Gunter, Daniel and Persson, Kristin A.},
+  doi          = {10.1002/cpe.3505},
+  journaltitle = {Concurrency and Computation: Practice and Experience},
+  number       = {17},
+  pages        = {5037--5059},
+  title        = {FireWorks: a dynamic workflow system designed for high-throughput applications},
+  url          = {http://dx.doi.org/10.1002/cpe.3505},
+  volume       = {27},
+  year         = {2015},
+}
+
+@article{Giannozzi2009,
+  author       = {Giannozzi, Paolo and Baroni, Stefano and Bonini, Nicola and Calandra, Matteo and Car, Roberto and Cavazzoni, Carlo and Ceresoli, Davide and Chiarotti, Guido L and Cococcioni, Matteo and Dabo, Ismaila and others},
+  journaltitle = {Journal of physics: Condensed matter},
+  number       = {39},
+  pages        = {395502},
+  publisher    = {IOP Publishing},
+  title        = {QUANTUM ESPRESSO: a modular and open-source software project for quantum simulations of materials},
+  volume       = {21},
+  year         = {2009},
+}
+
+@article{Kresse1996,
+  author       = {Kresse, Georg and Furthmüller, Jürgen},
+  journaltitle = {Physical review B},
+  number       = {16},
+  pages        = {11169},
+  publisher    = {APS},
+  title        = {Efficient iterative schemes for ab initio total-energy calculations using a plane-wave basis set},
+  volume       = {54},
+  year         = {1996},
 }
 
