docs | add geometry optimization

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -18,7 +18,7 @@
   eprinttype   = {arXiv},
   journaltitle = {arXiv e-prints},
   pages        = {arXiv:1234.5678},
-  title        = {Anharmonicit Quantification for Materials},
+  title        = {Anharmonicity Quantification for Materials},
   year         = {2020},
 }
 
