docs&paper | add arxiv reference

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -12,13 +12,13 @@
 
 @article{Knoop2020,
   author       = {Knoop, Florian and Purcell, Thomas A.R. and Scheffler, Matthias and Carbogno, Christian},
-  eid          = {arXiv:1234.5678},
-  eprint       = {1234.5678},
-  eprintclass  = {cond-mat.mtrl-sci},
+  eid          = {arXiv:2006.14672},
+  eprint       = {2006.14672},
+  eprintclass  = {cond-mat},
   eprinttype   = {arXiv},
   journaltitle = {arXiv e-prints},
-  pages        = {arXiv:1234.5678},
-  title        = {Anharmonicity Quantification for Materials},
+  pages        = {arXiv:2006.14672},
+  title        = {Anharmonicity Measure for Materials},
   year         = {2020},
 }
 
